--- a/static/css/custom/page_homepage.sass
+++ b/static/css/custom/page_homepage.sass
@@ -22,13 +22,12 @@
 .sticky
   position: fixed
   left: 0
+  right: 0
   top: 0
   height: 64px
-  width: 100%
-  overflow-y: hidden
-  overflow: hidden
-  background: $c_black
   z-index: 2
+  width: 100%
+  background: $c_black
 
 
 /* INTRO SECTION */
